[package]
name = "tree-buf"
version = "0.5.1"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"
description = "A prototype binary serialization protocol"
repository = "https://github.com/That3Percent/tree-buf"
keywords = ["serialization", "protocol", "binary", "buffers"]
categories = ["compression", "parser-implementations"]
license = "MIT"

[badges]
maintenance = { status = "experimental"}

[dependencies]
tree-buf-macros = {version = "0.5.0", path="../tree-buf-macros", optional = true }
simple-16 = { path="../../simple-16" }
num-traits = "0.2.11"

[features]
default = ["read", "write", "macros"]

read = []
write = []
macros = ["tree-buf-macros"]