[package]
name = "tree-buf"
version = "0.7.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"
description = "A prototype binary serialization protocol for data"
repository = "https://github.com/That3Percent/tree-buf"
keywords = ["serialization", "protocol", "binary", "buffers"]
categories = ["compression", "parser-implementations"]
license = "MIT"

[badges]
maintenance = { status = "experimental"}

[dependencies]
tree-buf-macros = {version = "0.7.0", path="../tree-buf-macros", optional = true }
simple-16 = "0.1.0"
num-traits = "0.2.11"
# TODO: Zfp See also 6669608f-1441-4bdb-97c0-5260c7c4bf0f
#ndarray-zfp-rs = "0.1.0"
#ndarray = "0.13.0"
gibbon = "0.1.1"
rayon = "1.3.0"
transmute = "0.1.1"
flame = { version = "0.2.2", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "float_list"
harness = false

[features]
default = ["read", "write", "macros"]

read = []
write = []
macros = ["tree-buf-macros"]
profile = ["flame"]