[package]
name = "tree-buf"
version = "0.8.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"
description = "A prototype binary serialization protocol for data"
repository = "https://github.com/That3Percent/tree-buf"
keywords = ["serialization", "protocol", "binary", "buffers"]
categories = ["compression", "parser-implementations"]
license = "MIT"

[badges]
maintenance = { status = "experimental"}

[dependencies]
tree-buf-macros = {version = "0.8.0", path="../tree-buf-macros", optional = true }
simple-16 = "0.1.0"
num-traits = "0.2.11"
gibbon = "0.1.3"
rayon = "1.3.0"
transmute = "0.1.1"

flame = { version = "0.2.2", optional = true }
coercible_errors = "0.1.4"
#zfp-sys-cc = "0.1.0"
defer = "0.1.0"
zigzag = "0.1.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.7.3"

[[bench]]
name = "float_list"
harness = false

[features]
default = ["encode", "decode", "macros"]

encode = []
decode = []
macros = ["tree-buf-macros"]
profile = ["flame"]